--- a/expense_statement/reports/report.xml
+++ b/expense_statement/reports/report.xml
@@ -14,12 +14,12 @@
         <field name="page_height">0</field>
         <field name="page_width">0</field>
         <field name="orientation">Landscape</field>
-        <field name="margin_top">25</field>
+        <field name="margin_top">20</field>
         <field name="margin_bottom">20</field>
         <field name="margin_left">5</field>
         <field name="margin_right">5</field>
-        <field name="header_line" eval="False"/>
-        <field name="header_spacing">23</field>
+        <field name="header_line" eval="True"/>
+        <field name="header_spacing">17</field>
         <field name="dpi">90</field>
     </record>
 
